--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
-			<h1 class="editable">Make a new friend today</h1>
-			<p class="subtext editable">Frisco helps you find new friends with common interests. Search for a new Tennis partner, find a baking side-kick or befriend a new drinking buddy.</p>
-			<div class="cta button alt"><a href="#">Join Now</a></div>
+			<h1 class="editable">Hi there! I'm Melvyn and welcome to my website!</h1>
+			<p class="subtext editable">I am currently located in San Diego where I am completing a Masters of Computer Science at the University of California, San Diego.</p>
+			<div class="cta button alt"><a href="#">Learn More</a></div>
 		</div>
 	</div>
-	<div class="learn-more"><a href="#learn-more">Learn more <span class="arrow">&#x25BC;</span></a></div>
+	<div class="learn-more"><a href="#learn-more">Scroll Down! <span class="arrow">&#x25BC;</span></a></div>
 </section>
 
 <div class="content">
 	<section class="info" id="learn-more">
 		<div class="container flex">
 			<div class="text">
-				<h2 class="editable">Introduce yourself</h2>
-				<p class="editable">Making news friends in the adult world is hard. Frisco is the perfect filter matching you the most interesting people in your area.</p>
+				<h2 class="editable">Recently...</h2>
+				<p class="editable">I graduated from the University of California, San Diego (UCSD) with a B.S. in Mathematics - Computer Science. My time at UCSD developed my passion for Software Engineering, Machine Learning, and Deep Learning. You can view some of my projects here.</p>
 			</div>
 			<div class="image">
-				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
+				<img class="editable" src="images/melvyn-grad-standing.jpg" alt="Melvyn at graduation" />
 			</div>
 		</div>
 	</section>
@@ -32,11 +32,11 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 	<section class="info">
 		<div class="container flex">
 			<div class="text">
-				<h2 class="editable">Pick your interests</h2>
-				<p class="editable">The more you tell Frisco the better it gets to know you. Frisco matches you with people who share similar interests with you.</p>
+				<h2 class="editable">Before...</h2>
+				<p class="editable">I lived in Kuala Lumpur, Malaysia, one of the hottest and rainiest countries in the world. Despite the tropical heat and storms, I enjoyed the outdoors—especially visiting the Petronas Twin Towers.</p>
 			</div>
 			<div class="image">
-				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
+				<img class="editable" src="images/KLCC.jpg" alt="Kuala Lumpue Petronas Towers" />
 			</div>
 		</div>
 	</section>
@@ -44,21 +44,21 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 	<section class="info">
 		<div class="container flex">
 			<div class="text">
-				<h2 class="editable">Swipe and go</h2>
-				<p class="editable">Frisco shows you cards with people who might be a good match for friendship. Swipe left to move to the next card or right to start talking.</p>
+				<h2 class="editable">Fun Fact</h2>
+				<p class="editable">The longest road trip I've done is a 30-hour, 2,100-mile drive from San Diego to Chicago, passing through 7 states: California, Arizona, New Mexico, Texas, Oklahoma, Missouri, and Illinois.</p>
 			</div>
 			<div class="image">
-				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
+				<img class="editable" src="images/states.png" alt="The Seven States" />
 			</div>
 		</div>
 	</section>
 
-	<section class="hero" style="background-image: url({% include relative-src.html src=page.bottom_image %})">
+	<section class="hero" style="background-image: url('/images/LaJolla-Sunset.jpg')">
 		<div class="inner-hero text-container">
 			<div class="hero-text-container">
-				<h2 class="editable">Find your buddy today</h2>
-				<p class="subtext editable">It's free, fun and an exciting way to meet new people.</p>
-				<div class="cta button alt"><a href="#">Join Now</a></div>
+				<h2 class="editable">Discover My Journey in Tech</h2>
+				<p class="subtext editable">Explore my projects, skills, and experiences in Software Engineering, Machine Learning, and Deep Learning.</p>
+				<div class="cta button alt"><a href="#">Learn More</a></div>
 			</div>
 		</div>
 	</section>
