--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 ---
-title: About
+title: Hobbies
 description: We've built an amazing team of developers, marketers, designers and sales people.
 image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
 ---
@@ -7,8 +7,8 @@ image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
-			<h1 class="editable">Our Story</h1>
-			<p class="subtext editable">We have an extremely talented team whose sole goal is to bring you closer to the people around you.</p>
+			<h1 class="editable">Hobbies</h1>
+			<p class="subtext editable">When I'm not immersed in coding and software projects, I enjoy a variety of hobbies that keep me inspired and balanced.</p>
 		</div>
 	</div>
 </section>
@@ -20,7 +20,7 @@ image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
 			{% for person in site.staff_members %}
 				<li>
 					<div class="square-image" style="background-image: url({% include relative-src.html src=person.image_path %})"></div>
-					<div class="name"><a target="_blank" href="https://twitter.com/{{ person.twitter_username }}">{{ person.name }}</a></div>
+					<div class="name"><a target="_blank" href="{{ person.twitter_username }}">{{ person.name }}</a></div>
 					<div class="position">{{ person.position }}</div>
 				</li>
 			{% endfor %}
