--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 title: Hobbies
 description: We've built an amazing team of developers, marketers, designers and sales people.
 image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
+permalink: /hobbies/
 ---
 
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
