--- a/friendship.html
+++ b/friendship.html
@@ -6,20 +6,27 @@ permalink: /category/friendship/
 ---
 
 <section class="hero" style="background-image: url(https://source.unsplash.com/MqJX_8EaStM/2000x1322)">
-	<div class="inner-hero text-container">
-		<div class="hero-text-container">
-			<h1>Projects Categorized Under {{ page.title | capitalize }}</h1>
-			<p class="subtext">These projects highlight my work in {{ page.title | capitalize }}.</p>
-		</div>
-	</div>
-</section>
-
-<section>
-	<div class="text-container">
-		<p class="change-category">You're currently looking at projects categorised under <strong>{{ page.title | capitalize }}</strong>. <a href="{{ site.baseurl }}/projects/">View all projects</a> instead.</p>
-
-		<ul class="blog-posts">
-			{% include list-posts.html posts=page.posts %}
-		</ul>
-	</div>
-</section>
+    <div class="inner-hero text-container">
+      <div class="hero-text-container">
+        <h1>Projects Categorized Under {{ page.title | capitalize }}</h1>
+        <p class="subtext">These projects highlight my work in {{ page.title | capitalize }}.</p>
+      </div>
+    </div>
+  </section>
+  
+  <section>
+    <div class="text-container">
+      <p class="change-category">You're currently looking at projects categorized under <strong>{{ page.title | capitalize }}</strong>. <a href="{{ site.baseurl }}/projects/">View all projects</a> instead.</p>
+  
+      <ul class="blog-posts">
+        {% for post in site.posts %}
+          {% if post.categories contains 'friendship' %}
+            <li>
+              <a href="{{ post.url }}">{{ post.title }}</a>
+            </li>
+          {% endif %}
+        {% endfor %}
+      </ul>
+    </div>
+  </section>
+  
